# UHHI

./: .gitignore  Cargo.toml  README.md
.cargo/: config  config.toml
common_features/cust_core/: Cargo.toml
common_features/cust_core/src/: lib.rs
common_features/cust_derive/: Cargo.toml
cuda_backend/: Cargo.toml
cuda_backend/cust_raw/: bindgen.sh  build.rs
cuda_backend/cust_raw/src/: cuda.rs
cuda_backend/src/: device.rs  error.rs  event.rs  external.rs  function.rs  lib.rs  main.rs  module.rs  prelude.rs  stream.rs
cuda_backend/src/context/: mod.rs
cuda_backend/src/memory/: malloc.rs  mod.rs  pointer.rs
cuda_backend/src/memory/device/: device_box.rs  device_buffer.rs  device_slice.rs  device_variable.rs  mod.rs
kernels/: activation.cpp  activation.tops  activation.topsfb  batch_matmul.cpp  batch_matmul.out  compile.sh  convolution.tops  convolution.topsfb  element.topsfb  elementi32.cu  transpose.tops  transpose_kernel.cpp  transpose_kernel.topsfb
resources/: activation.cu  activation.ptx  activation.tops  convolution.cu  convolution.ptx  convolution.tops  copy_d2d.topsfb  element.cu  element.tops  matmul.cu  matmul.ptx  matmul.tops  transpose.cu  transpose.tops
tops_backend/: .gitignore  Cargo.toml  build.rs
tops_backend/.cargo/: config
tops_backend/eccl_raw/: Cargo.toml  bindgen.sh  build.rs  wrapper.h
tops_backend/eccl_raw/src/: lib.rs
tops_backend/src/: device.rs  error.rs  event.rs  external.rs  function.rs  lib.rs  main.rs  module.rs  prelude.rs  stream.rs
tops_backend/src/context/: mod.rs
tops_backend/src/memory/: malloc.rs  mod.rs  pointer.rs
tops_backend/src/memory/device/: device_box.rs  device_buffer.rs  device_slice.rs  device_variable.rs  mod.rs
tops_backend/tops_raw/: Cargo.toml  README.md  bindgen.sh  build.rs  wrapper.h
tops_backend/tops_raw/src/: lib.rs
uhal/: Cargo.toml  README.md
uhal/src/: device.rs  error.rs  event.rs  external.rs  function.rs  lib.rs  module.rs  prelude.rs  stream.rs
uhal/src/context/: mod.rs
uhal/src/memory/: device.rs  malloc.rs  mod.rs  pointer.rs
