[package]
name = "cuda_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cust_raw = { path = "./cust_raw", version = "0.11.2"}
cust_core = { path = "../common_features/cust_core", version = "0.1.0"}
cust_derive = { path = "../common_features/cust_derive", version = "0.2" }
uhal = { path = "../uhal", version = "0.1.0"}
bitflags = "1.2"
glam = { version = "0.20", features=["cuda"], optional = true }
mint = { version = "^0.5", optional = true }
num-complex = { version = "0.4", optional = true }
vek = { version = "0.15.1", optional = true, default-features = false }
bytemuck = { version = "1.7.3", optional = true }

[features]
default= ["bytemuck"]
impl_glam = ["cust_core/glam", "glam"]
impl_mint = ["cust_core/mint", "mint"]
impl_vek = ["cust_core/vek", "vek"]
impl_half = ["cust_core/half"]
impl_num_complex = ["cust_core/num-complex", "num-complex"]

[build-dependencies]
find_cuda_helper = { path = "./find_cuda_helper", version = "0.2" }

