[package]
name = "tops_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tops_raw = { path = "./tops_raw", version = "0.1.1"}
cust_core = { path = "../common_features/cust_core", version = "0.1.0"}
cust_derive = { path = "../common_features/cust_derive", version = "0.2" }
uhal = { path = "../uhal", version = "0.1.0"}
bitflags = "1.2"
glam = { version = "0.20", features=["cuda"], optional = true }
mint = { version = "^0.5", optional = true }
num-complex = { version = "0.4", optional = true }
vek = { version = "0.15.1", optional = true, default-features = false }
bytemuck = { version = "1.7.3", optional = true }

[profile.dev]
rpath = true